--- a/LayoutSamples/MainPage.xaml
+++ b/LayoutSamples/MainPage.xaml
@@ -1,35 +1,25 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="LayoutSamples.MainPage">
 
     <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
-
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
+        <VerticalStackLayout Padding="20,0" Spacing="20">
+            <FlexLayout HeightRequest="50" BackgroundColor="LightGray" JustifyContent="SpaceBetween" AlignItems="Stretch">
+                <Label Padding="5" VerticalTextAlignment="Center" Text="First" BackgroundColor="OrangeRed" FlexLayout.AlignSelf="Center" />
+                <Label Padding="5" VerticalTextAlignment="Center" Text="Second" Background="Red" FlexLayout.Grow="0" FlexLayout.AlignSelf="End" />
+                <Label Padding="5" VerticalTextAlignment="Center" Text="Third" Background="Purple" FlexLayout.AlignSelf="Start" />
+            </FlexLayout>
+            <Grid RowDefinitions="*, *, *" ColumnDefinitions="*, *, *" BackgroundColor="LightGrey" FlexLayout.Grow="1.0">
+                <BoxView Grid.Row="0" Grid.Column="0" Color="LightGreen" />
+                <BoxView Grid.Row="0" Grid.Column="1" Color="Green" />
+                <BoxView Grid.Row="0" Grid.Column="2" Color="DarkGreen" />
+                <FlexLayout Grid.Row="1" Grid.Column="1" Padding="0" Margin="0" BackgroundColor="LightCyan" JustifyContent="SpaceBetween">
+                    <Label Padding="5" VerticalTextAlignment="Center" Text="First" BackgroundColor="OrangeRed" />
+                    <Label Padding="5" VerticalTextAlignment="Center" Text="Secondd" Background="Red" FlexLayout.Grow="0" />
+                    <Label Padding="5" VerticalTextAlignment="Center" Text="Third" Background="Purple" />
+                </FlexLayout>
+            </Grid>
         </VerticalStackLayout>
     </ScrollView>
 
